--- a/package.json
+++ b/package.json
@@ -1,36 +1,16 @@
 {
-  "name": "CryptoMan",
+  "name": "kitten-website",
   "version": "1.0.0",
-  "description": "The Cryptoman NFT minting dapp.",
-  "private": true,
-  "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.4",
-    "react-scripts": "4.0.3",
-    "redux": "^4.1.1",
-    "redux-thunk": "^2.3.0",
-    "styled-components": "^5.3.0",
-    "web-vitals": "^1.0.1",
-    "web3": "^1.5.1",
-    "web3-eth-contract": "^1.5.2"
-  },
-  "author": "Ali Solanki, Daniel Eugene Botha, Steffan Jensen",
-  "license": "MIT",
+  "description": "kitten website",
+  "main": "functions/server.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "netlify-lambda build functions"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "express": "^4.17.1",
+    "serverless-http": "^2.7.0"
+  },
+  "devDependencies": {
+    "netlify-lambda": "^2.0.15"
   }
 }
