--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "your-project-name",
   "version": "1.0.0",
   "scripts": {
-    "build": "npm install && netlify-lambda build functions"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.17.1",
