--- a/package.json
+++ b/package.json
@@ -2,13 +2,10 @@
   "name": "your-project-name",
   "version": "1.0.0",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "echo 'No build step required'"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "serverless-http": "^2.7.0"
-  },
-  "devDependencies": {
-    "netlify-lambda": "^2.0.15"
+    "express": "^4.17.1"
   }
 }
